--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         
       </section>
       <div class="copy">
-        <p>Copyright &copy; 2024 Design By <span class="deve">DeveloperGTM</span></p>
+        <p>Copyright &copy; 2024 Design By <span class="deve">SAURABHMURARI</span></p>
       </div>
 </body>
 </html>
